[gd_scene load_steps=6 format=3 uid="uid://cxa7m8kyu1mmx"]

[ext_resource type="Script" path="res://hud.gd" id="1_ifsar"]
[ext_resource type="FontFile" uid="uid://denwofbhewjl" path="res://fonts/Xolonium-Regular.ttf" id="2_yktfa"]
[ext_resource type="Texture2D" uid="uid://03banp7msr68" path="res://icon.svg" id="3_ihydx"]

[sub_resource type="InputEventAction" id="InputEventAction_5way1"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_ie6a4"]
events = [SubResource("InputEventAction_5way1")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_ifsar")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -90.0
offset_right = 90.0
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_yktfa")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
custom_minimum_size = Vector2(480, 2.08165e-12)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.5
offset_top = -39.0
offset_right = 107.5
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_yktfa")
theme_override_font_sizes/font_size = 64
text = "Dodge da creeps"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -167.5
offset_top = -140.0
offset_right = 167.5
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_yktfa")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_ie6a4")
text = "comensar"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PowerUpLabelBase" type="Sprite2D" parent="."]
visible = false
position = Vector2(32, 688)
scale = Vector2(0.242188, 0.25)
texture = ExtResource("3_ihydx")

[node name="PowerUpBar" type="Node2D" parent="."]
position = Vector2(32, 688)

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
